--- a/templates/all_books.html
+++ b/templates/all_books.html
@@ -1,4 +1,4 @@
-{% extends 'user_base.html' %}
+{% extends 'admin_base.html' %}
 
 {% block title %}
     Home
@@ -7,8 +7,7 @@
 
 {% block content %}
     {% include 'search.html' with context %}
-    <h3>Welcome</h3>
-    <p>Explore our collection of books and manage your library account.</p>
+    
     
     <div class="sections-list">
     {% for section in sections %}
@@ -19,15 +18,15 @@
                     {% for book in section.books %}
                         {% if (param == 'book_name' and book_name.lower() in book.name.lower())  %}
                     
-
+                       
                             
                                 <div class="card col-md-3 mx-2 my-2">
                                     <img src="{{url_for('static', filename='images/pexels-thought-catalog-2228557.jpg')}}" class="card-img-top" alt="{{ book.name }}" width="150" height="200">
                                     <div class="card-body">
                                         <h5 class="care-title">{{ book.name }}</h5>
                                         <p class="card-text">{{ book.authors }}</p>
-                                        <a href="{{ url_for('book_request', book_id=book.id) }}" class="btn btn-primary">Request</a>
-                                        <a href="{{ url_for('book_payment', book_id=book.id) }}" class="btn btn-success">Buy</a>
+                                        <a href="{{ url_for('edit_book', id=book.id) }}" class="btn btn-primary">Edit Book</a>
+                                        <a href="{{ url_for('delete_book', id=book.id) }}" class="btn btn-danger">Delete Book</a>
                                     </div>
                                 </div>
                         {% elif param == 'author_name' and author_name.lower() in book.authors.lower() %}
@@ -36,8 +35,8 @@
                                     <div class="card-body">
                                         <h5 class="care-title">{{ book.name }}</h5>
                                         <p class="card-text">{{ book.authors }}</p>
-                                        <a href="{{ url_for('book_request', book_id=book.id) }}" class="btn btn-primary">Request</a>
-                                        <a href="{{ url_for('book_payment', book_id=book.id) }}" class="btn btn-success">Buy</a>
+                                        <a href="{{ url_for('edit_book', id=book.id) }}" class="btn btn-primary">Edit Book</a>
+                                        <a href="{{ url_for('delete_book', id=book.id) }}" class="btn btn-danger">Delete Book</a>
                                     </div>
                                 </div>
 
@@ -47,8 +46,8 @@
                                     <div class="card-body">
                                         <h5 class="care-title">{{ book.name }}</h5>
                                         <p class="card-text">{{ book.authors }}</p>
-                                        <a href="{{ url_for('book_request', book_id=book.id) }}" class="btn btn-primary">Request</a>
-                                        <a href="{{ url_for('book_payment', book_id=book.id) }}" class="btn btn-success">Buy</a>
+                                        <a href="{{ url_for('edit_book', id=book.id) }}" class="btn btn-primary">Edit</a>
+                                        <a href="{{ url_for('delete_book', id=book.id) }}" class="btn btn-danger">Delete</a>
                                     </div>
                                 </div>
                         
@@ -69,7 +68,7 @@
 
 {% endblock %}
 <style>
-
+  
 
     .books {
         display: flex;
@@ -77,5 +76,8 @@
         justify-content: center;
     }
 
- 
+   
+   
+
+    
 </style>
