--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,84 +1,27 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 
-.form_group {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 300px;
- } 
-
-form {
-    display: flex;
-    flex-direction: column;
-} 
-
-label {
-    margin-bottom: 8px;
-}
-
-input {
-    padding: 10px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-button {
-    background-color: #3498db;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #217dbb;
-}
 
 header {
-    color: purple;
+    color: rgb(55, 20, 228);
 }
 
-.styled-table {
-    width: 80%;
-    border-collapse: collapse;
-    margin: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.styled-table thead {
-    background-color: #cde4c2;
-    color: #fff;
-}
-
-.styled-table th,
-.styled-table td {
-    padding: 12px;
+.table {
+    width: 100%;
+    border: 1px solid #ddd; /* Add border to the entire table */
+  }
+  
+  .table th,
+  .table td {
+    padding: 8px;
+    border-bottom: 1px solid #ddd; /* Add bottom border to table cells */
+  }
+  
+  .table th {
+    background-color: #afcb94;
+    font-weight: bold;
     text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-.styled-table tbody tr:hover {
+  }
+  
+  .table tbody tr:hover {
     background-color: #f5f5f5;
-}
-
-.styled-table i {
-    font-size: 24px; 
-    margin-right: 12px; /* Adjust the right margin as needed */
-    margin-bottom: 12px; /* Adjust the bottom margin as needed */
-}
-
-
+  }
+  
