--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,97 +1,67 @@
-{% extends 'base.html'%}
+{% extends 'admin_base.html'%}
 
 
 {% block title %}
-   Admin DashBoard
+   Home
 {% endblock %}
 
 
 {% block content %}
 
-<h1>Admin DashBoard</h1>
+<h1></h1>
 
-<a href="{{url_for('admin_book_requests')}}"  class="btn btn-success">See Book Requests</a><br><br>
+<h4> Welcome, Library Admin! </h4>
 
-<a href="{{url_for('book_status')}}"  class="btn btn-success">See Book Status</a><br><br>
+<p style="font-family: Arial, sans-serif; font-size: 16px; color: #333; line-height: 1.5;">
+   As the administrator of our library management system, you play a crucial role in ensuring smooth operations and providing a seamless experience for our users. Manage your library effectively with our comprehensive suite of tools and features.
+</p>
 
-<a href="{{ url_for('add_section') }}">Add Section</a>
+   <p><h4>Key Features:</h4></p>
+   
+   <p style="font-family: Arial, sans-serif; font-size: 16px; color: #333; line-height: 1.5;"><h6>Manage Books:</h6> Add, edit, and delete books from the library catalog. Keep track of book details such as title, author, genre, and availability status.</p> 
+   <p style="font-family: Arial, sans-serif; font-size: 16px; color: #333; line-height: 1.5;"><h6>Manage Users:</h6> Maintain user accounts, review registration requests, and manage user privileges. Ensure a secure and user-friendly experience for all library patrons.</p>
+   
+   <p style="font-family: Arial, sans-serif; font-size: 16px; color: #333; line-height: 1.5;"><h6>Book Issuance:</h6> Process book issuance requests, track issued books, and manage due dates and returns. Keep a record of books borrowe by users for efficient library management.</p>
+    
+   <p style="font-family: Arial, sans-serif; font-size: 16px; color: #333; line-height: 1.5;"><h6>Request Management:</h6>Review and approve book requests from users. Monitor pending requests and ensure timely fulfillment to enhance user satisfaction.</p>
+    
 
-<a href="{{ url_for('check_and_update_status') }}">Refresh</a>
 
 
-
-<h2>Section:</h2>
-
-
-<table class="styled-table">
-   <thead>
+   <div class="table">
+      <table>
+      <h2>Statistics</h2>
       <tr>
-         <th>Section ID</th>
-         <th>Section Name</th>
-         <th>Date Created</th>
-         <th>Description</th>
-         <th>Actions</th>
+        <th>Category</th>
+        <th>Count</th>
       </tr>
-   </thead>
-
-   <tbody>
-      {% for section in sections %}
       <tr>
-         <td>{{section.id}}</td>
-         <td>{{section.name}}</td>
-         <td>{{section.date_created}}</td>
-         <td>{{section.description}}</td>
-         <td>
-            <a href="{{url_for('show_section', id=section.id)}}">
-               <i class="fa-solid fa-eye"></i>
-               
-            </a>
-
-            <a href="{{url_for('edit_section', id=section.id)}}">
-               <i class="fas fa-edit"></i>
-               
-            </a>
-
-            <a href="{{url_for('delete_section', id=section.id)}}">
-               <i class="fas fa-trash"></i>
-               
-            </a>
-           
-         </td>
+        <td>Total Books</td>
+        <td>{{ books | length }}</td>
       </tr>
-      {% endfor %}
-   </tbody>
-</table>
-
-<h2>Book Request List</h2>
-<table class="styled-table">
-   <thead>
       <tr>
-         <th>Request Id</th>
-         <th>Username</th>
-         <th>Book Name</th>
-         <th>Issue Date </th>
-         <th>Return Date</th>
-         <th>Revoke</th>
-         
+        <td>Total Sections</td>
+        <td>{{ sections | length }}</td>
       </tr>
-   </thead>
-
-   <tbody>
-      {% for issue in book_issues %}
-      {% if issue.approved == 'Accepted' %}
       <tr>
-         <td>{{issue.id}}</td>
-         <td>{{issue.user_name}}</td>
-         <td>{{issue.book_name}}</td>
-         <td>{{issue.issue_date}}</td>
-         <td>{{issue.return_date}}</td>
-         <td><a href="{{url_for('book_revoke', id=issue.id)}}">Revoke</a></td>
+        <td>Total Books Issued</td>
+        {% set accepted_book_issues = [] %}
+         {% for issue in book_issues %}
+            {% if issue.approved == 'Accepted' %}
+               {% set _ = accepted_book_issues.append(issue) %}
+            {% endif %}
+         {% endfor %}
+        <td>{{ accepted_book_issues | length }}</td>
       </tr>
-      {% endif %}
-      {% endfor %}
-   </tbody>
-</table>
+      <tr>
+        <td>Current Requests</td>
+        <td>{{ book_requests | length }}</td>
+      </tr>
+      
+    </table></div>
+
+
+
 
 {% endblock%}
  
