--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    {% include 'nav.html' with context %}
+    {% include 'admin_nav.html' with context %}
     {% include 'messages.html' with context %}
     <header>
         <h1>Library Management System</h1>
@@ -19,7 +19,16 @@
     </header>
 
     <main>
-        {% block content %}{% endblock %}
+        <div class="container">
+            
+            {% block content %}
+            
+            
+            {% endblock %}
+
+
+        </div>
+        
     </main>
 
     <footer>
