--- a/templates/book/edit.html
+++ b/templates/book/edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin_base.html' %}
 
 {% block title %}
     Edit Book
@@ -7,35 +7,39 @@
 
 {% block content %}
     <h1>Edit Book</h1>
-    <form action="{{url_for('edit_book_post', id=book.id)}}" method="post">
-        <label for="section_id">Section:</label>
-        <select name="section_id" id="section_id" required>
-            {% for sec in sections %}
-            {% if sec.id == book.section.id %}
-                <option  selected value="{{sec.id}}">{{sec.name}}</option>
-            {% else %}
-            <option value="{{sec.id}}">{{sec.name}}</option>
-            {% endif %}
-            {% endfor %}
-        </select>
-        <label for="name">Book Name:</label>
-        <input type="text" name="name" id="name"  value="book.name" required>
+    <div class="form-group">
+        <form action="{{url_for('edit_book_post', id=book.id)}}" method="post" class="form">
+            <label for="section_id" class="form-label">Section:</label>
+            <select name="section_id" id="section_id" required class="form-control">
+                {% for sec in sections %}
+                {% if sec.id == book.section.id %}
+                    <option  selected value="{{sec.id}}">{{sec.name}}</option>
+                {% else %}
+                <option value="{{sec.id}}">{{sec.name}}</option>
+                {% endif %}
+                {% endfor %}
+            </select>
+            <label for="name" class="form-label">Book Name:</label>
+            <input type="text" name="name" id="name"  value="{{book.name}}" required class="form-control">
+    
+            <label for="content" class="form-label">Content:</label>
+            <textarea type="text" id="content" name="content" rows="4" cols="50" required  class="form-control">{{book.content}}</textarea>
+    
+            <label for="authors" class="form-label">Authors:</label>
+            <input type="text" name="authors" id="authors" value="{{book.authors}}" required class="form-control">
+    
+            <label for="date_added" class="form-label">Date Added:</label>
+            <input type="date" name="date_added" id="date_added" value="{{book.date_added}}" required class="form-control">
+    
+            <label for="price" class="form-label">Price:</label>
+            <input type="number" name="price" id="price" value="{{book.price}}" required class="form-control">
+    
+            
+            <button type="submit" class="btn btn-success">
+                Update
+            </button>
+        </form>
 
-        <label for="content">Content:</label>
-        <textarea id="content" name="content" rows="4" cols="50" value="book.content" required></textarea>
-
-        <label for="authors">Authors:</label>
-        <input type="text" name="authors" id="authors" value="book.authors" required>
-
-        <label for="date_added">Date Added:</label>
-        <input type="date" name="date_added" id="date_added" value="book.date_added" required>
-
-        
-        <button type="submit" class="btn btn-success">
-            Update
-        </button>
-    </form>
-
-
-
+    </div>
+    
 {% endblock %}
