--- a/templates/register.html
+++ b/templates/register.html
@@ -1,27 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div class="form-group">
+
     
-    <form action="/register" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
+    <form action="/register" method="post" class="form">
+        <label for="username" class="form-label">Username:</label>
+        <input type="text" id="username" name="username" required class="form-control"><br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
+        <label for="password" class="form-label">Password:</label>
+        <input type="password" id="password" name="password" required class="form-control"><br>
 
-        <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password" required><br>
+        <label for="confirm_password" class="form-label">Confirm Password:</label>
+        <input type="password" id="confirm_password" name="confirm_password" required class="form-control"><br>
 
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br>
+        <label for="name" class="form-label">Name:</label>
+        <input type="text" id="name" name="name" required class="form-control"><br>
 
-       
-
-       
-
-
-
-        <input type="submit" value="Register">
+        <input type="submit" value="Register" class="btn btn-primary">
     </form>
+
+
+
+</div>
+    
     <p>Already have an account? <a href="/login">Login here</a></p>
 {% endblock %}
