--- a/templates/section/add.html
+++ b/templates/section/add.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'admin_base.html'%}
 
 {% block title %}
     Add Section
@@ -8,20 +8,32 @@
 
 {% block content %}
 <h2>Add Section</h2>
-<div class="form_group">
+<div>
     
-    <form action="" method="post">
-    <label for="name">Section Name:</label>
-    <input type="text" name="name" id="name" required>
+    <form action="" method="post" class="form">
+        <div class="form-group">
+            <label for="name" class="form-label">Section Name:</label>
+            <input type="text" name="name" id="name" required class="form-control">
 
-    <label for="date_created">Date Created :</label>
-    <input type="date" name="date_created" id="date_created" required>
+        </div>
+        
+        <div class="form-group">
+            <label for="date_created" class="form-label">Date Created :</label>
+            <input type="date" name="date_created" id="date_created" required class="form-control">
+        </div>
 
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" rows="4" cols="50" placeholder="Enter your description here"></textarea><br><br>
+    
+        <div class="form-group">
+            <label for="description" class="form-label">Description:</label>
+            <textarea id="description" name="description" rows="4" cols="50" placeholder="Enter your description here" class="form-control"></textarea><br><br>
+        </div>
+    
 
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Add</button>
 
-    <button type="submit">Add</button>
+        </div>
+        
 
 </form>
 
