--- a/templates/section/show.html
+++ b/templates/section/show.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin_base.html' %}
 
 {% block title %}
     Books of Section {{section.name}}
@@ -7,23 +7,23 @@
 
 
 {% block content %}
-<h1>Section {{section.name}} </h1>
+<h1>{{section.name}} </h1>
 <div>
-    <h2>Books:</h2>
-    <a href="{{url_for('add_book', section_id=section.id)}}">
-        <i class="fas fa-plus "></i>
-        Add
+    
+    <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-outline-success">
+        
+        Add Book
     </a>
 
 </div>
 
 
 <div>
-    <h2>Books in this Section</h2>
-    <table class="styled-table">
+    <h3>Books in this Section</h3>
+    <table class="table">
         <thead>
             <tr>
-                <th>ID</th>
+                <!-- <th>ID</th> -->
                 <th>Name</th>
                 <th>Authors</th>
                 <th>Date Added</th>
@@ -35,19 +35,19 @@
             {% for book in section.books %}
                 <tr>
                     
-                    <td>{{ book.id }}</td>
+                    <!-- <td>{{ book.id }}</td> -->
                     <td>{{ book.name }}</td>
                     <td>{{ book.authors }}</td>
                     <td>{{ book.date_added }}</td>
                     
                     <td>
-                        <a href="{{url_for('edit_book', id=book.id)}}" class="btn btn-primary">
-                            <i class="fas fa-edit    "></i>
-                            Edit
+                        <a href="{{url_for('edit_book', id=book.id)}}" class="btn btn-outline-secondary">
+                            
+                            Edit Book
                         </a>
-                        <a href="{{url_for('delete_book', id=book.id)}}" class="btn btn-danger">
-                            <i class="fas fa-trash    "></i>
-                            Delete
+                        <a href="{{url_for('delete_book', id=book.id)}}" class="btn btn-outline-danger">
+                            
+                            Delete Book
                         </a>
                       
 
@@ -57,8 +57,5 @@
         </tbody>
     </table>
 </div>
-
-
-
 
 {% endblock %}
