--- a/templates/user_request_history.html
+++ b/templates/user_request_history.html
@@ -1,33 +1,26 @@
-{% extends 'base.html'%}
+{% extends 'user_base.html'%}
 
 
 {% block title %}
-   Book Issued
+   Issue History
 {% endblock %}
 
 
 {% block content %}
 
-<h1>User DashBoard</h1>
+<h2 style="text-align: center;">Book Issue History</h2>
 
 
-
-
-<h2>Book Issued</h2>
-
-
-<table class="styled-table">
+<table class="table">
    <thead>
       <tr>
-         <th>Id</th>
+         
          <th>Book Name</th>
          <th>Authors</th>
          <th>Request Date</th>
          <th>Return Date </th>
          <th> Status </th>
-         
-         
-         
+            
       </tr>
    </thead>
 
@@ -35,18 +28,13 @@
       {% for req in book_issue %}
       <tr>
        
-         <td>{{req.id}}</td>
+         
          <td>{{req.book_name}}</td>
          <td>{{req.book_author}}</td>
          <td>{{req.issue_date}}</td>
          <td>{{req.return_date}}</td>
          <td>{{req.approved}}</td>
-
-         
-         
-       
-         
-        
+ 
       </tr>
       {% endfor %}
    </tbody>
